--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,19 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="tertiary">
     <ion-title>
-      Ionic Blank
+      Hotels
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-card *ngFor="let hotel of hotels" (click)="openHotel(hotel)">
+    <ion-card-header color="tertiary" outline="true">
+      <ion-card-title>{{hotel.id+' '+hotel.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      {{hotel.description}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+<router-outlet></router-outlet>
