Fixed some errors of previous commit

--- a/src/app/info-cell/info-cell.page.html
+++ b/src/app/info-cell/info-cell.page.html
@@ -48,7 +48,7 @@
       <ion-icon name="arrow-dropleft"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
-      <ion-fab-button color="{{cell[0].cost < userValue ? 'success':'danger'}}">
+      <ion-fab-button color="{{cell[0].cost <= userValue ? 'success':'danger'}}">
         ${{userValue}}
       </ion-fab-button>        
     </ion-fab-list>
