Added buttons 'GoBack' to each of pages and added functional to it

--- a/src/app/current-hotel/current-hotel.page.html
+++ b/src/app/current-hotel/current-hotel.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="tertiary">
+  	<ion-button (click)="goBack()" color="tertiary">
+  	  <ion-icon name="arrow-dropleft-circle" fill="outline" color="light" size="large"></ion-icon>
+  	</ion-button>
     <ion-title>OUR CELLS</ion-title>
   </ion-toolbar>
 </ion-header>
