--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title>
-      Hotels
-    </ion-title>
+    <ion-title>Hotels</ion-title>
+    <ion-button (click)="signOut()" color="tertiary" slot="end">
+  	  <ion-icon name="exit" fill="outline" color="light" size="large"></ion-icon>
+  	</ion-button>
   </ion-toolbar>
 </ion-header>
 
