--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -25,4 +25,10 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+<!-- <div *ngIf="users">
+  <div *ngFor="let user of users">
+    <p>{{user.name}}: {{user.purse}}</p>
+  </div>
+</div> -->
 <router-outlet></router-outlet>
+
