--- a/src/app/info-cell/info-cell.page.html
+++ b/src/app/info-cell/info-cell.page.html
@@ -7,31 +7,33 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
   <ion-card>
     <ion-item>
       <ion-icon name="medal" slot="end"></ion-icon>
-      <ion-label>№: {{cell[0].id}}</ion-label>
+      <ion-label>№: {{cell ? cell.number : null}}</ion-label>
     </ion-item>
 
     <ion-item>
       <ion-icon name="list-box" slot="end"></ion-icon>
-      <ion-label>Name: {{cell[0].name}}</ion-label>
+      <ion-label>Name: {{cell ? cell.name : null}}</ion-label>
     </ion-item>
 
     <ion-item>
       <ion-icon name="basket" slot="end"></ion-icon>
-      <ion-label>${{cell[0].cost}}</ion-label>
+      <ion-label>${{cell ? cell.cost : null}}</ion-label>
     </ion-item>
 
     <ion-button 
       margin size="large" 
       expand="block" 
       fill="outline" 
-      color="{{cell[0].available === 0 ? 'success' : cell[0].available === userId ? 'warning':'danger'}}"
+      color="{{ !user ? 'success' : user === userId ? 'warning':'danger'}}"
     >
-      {{ cell[0].available === 0 ? 'Свободен' : cell[0].available === userId ? 'Забронирован Вами' : 'Забронирован' }}
+      {{ !user ? 'Свободен' : user === userId ? 'Забронирован Вами' : 'Забронирован' }}
     </ion-button>
+  
   </ion-card>
 
   <ion-card>
@@ -41,11 +43,12 @@
       fill="outline" 
       color="primary"
       (click)="buyCell()"
-      disabled="{{cell[0].available === 0 ? 'false' : cell[0].available === userId ? 'true' : cell[0].cost <= userValue ? 'true':'false'}}"
+      disabled="{{ !user ? 'false' : user === userId ? 'true' : cell.cost <= userPurse ? 'true' : 'false'}}"
     >
-      Заказать за ${{cell[0].cost}}	
+      Заказать за ${{cell ? cell.cost : null}}	
     </ion-button>
   </ion-card>
+
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
     
     <ion-fab-button color="dark">
@@ -53,8 +56,8 @@
     </ion-fab-button>
 
     <ion-fab-list side="start">
-      <ion-fab-button color="{{cell[0].cost <= userValue ? 'success':'danger'}}">
-        ${{userValue}}
+      <ion-fab-button color="{{!cell ? 'danger' : cell.cost <= userPurse ? 'success':'danger'}}">
+        ${{userPurse}}
       </ion-fab-button>    
     </ion-fab-list>
 
